# DataIngestionFramework

./: pyproject.toml
